--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-simple-import-sort": "^5.0.1",
+    "eslint-plugin-sort-class-members": "^1.6.0",
+    "eslint-plugin-sort-destructure-keys": "^1.3.3",
+    "eslint-plugin-sort-keys-fix": "^1.1.0",
     "eslint-plugin-tsdoc": "^0.2.1",
     "eslint-plugin-unicorn": "^15.0.1",
     "husky": "^4.2.1",
