--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
     "sort-keys-fix",
     "sort-destructure-keys",
     "sort-class-members",
+    "typescript-sort-keys",
     "jest",
     "tsdoc"
   ],
@@ -65,6 +66,8 @@
     "sort-destructure-keys/sort-destructure-keys": "error",
     "sort-imports": "off",
     "sort-keys-fix/sort-keys-fix": "error",
-    "tsdoc/syntax": "error"
+    "tsdoc/syntax": "error",
+    "typescript-sort-keys/interface": "error",
+    "typescript-sort-keys/string-enum": "error"
   }
 }
