--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-sort-destructure-keys": "^1.3.3",
     "eslint-plugin-sort-keys-fix": "^1.1.0",
     "eslint-plugin-tsdoc": "^0.2.1",
+    "eslint-plugin-typescript-sort-keys": "^0.5.0",
     "eslint-plugin-unicorn": "^15.0.1",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
