--- a/.eslintrc
+++ b/.eslintrc
@@ -47,6 +47,7 @@
     "arrow-parens": ["error", "always"],
     "import/order": "off",
     "no-null/no-null": "error",
+    "security/detect-non-literal-fs-filename": "off",
     "simple-import-sort/sort": "error",
     "sort-class-members/sort-class-members": [
       "error",
