--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "allowJs": false,
-    "allowSyntheticDefaultImports": true,
-    "allowUnreachableCode": false,
-    "allowUnusedLabels": false,
     "alwaysStrict": true,
     "declaration": true,
     "declarationMap": true,
@@ -14,19 +10,13 @@
     "experimentalDecorators": true,
     "forceConsistentCasingInFileNames": true,
     "incremental": true,
-    "keyofStringsOnly": false,
-    "lib": ["dom", "ESNext", "ESNext.AsyncIterable"],
+    "lib": ["DOM", "ESNext", "ESNext.AsyncIterable"],
     "module": "CommonJS",
-    "moduleResolution": "Node",
-    "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "noStrictGenericChecks": false,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "outDir": "lib",
-    "preserveConstEnums": false,
-    "pretty": true,
     "removeComments": true,
     "resolveJsonModule": true,
     "sourceMap": true,
@@ -35,7 +25,6 @@
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "stripInternal": true,
     "target": "ESNext",
     "typeRoots": ["declarations", "node_modules/@types"],
     "useDefineForClassFields": true
