--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,64 @@
-dist
-!www/favicon.ico
-www
-*~
-*.sw[mnpcod]
+# Logs
+logs
 *.log
+log.txt
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
 *.tmp
 *.tmp.*
-log.txt
-*.sublime-project
-*.sublime-workspace
-.stencil
-.idea
-.sass-cache
-.versions
+
+# test coverage
+coverage
+
+# dependency directories
 node_modules
+jspm_packages
+
+# TypeScript cache
+*.tsbuildinfo
+
+# optional npm cache directory
+.npm
+
+# optional eslint cache
+.eslintcache
+
+# output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
+.env.test
+
+# output
+lib
+dist
+prod
+build
+esm
+
+# OS
 $RECYCLE.BIN
 .DS_Store
 Thumbs.db
 UserInterfaceState.xcuserstate
-.env
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
 ehthumbs.db
 nbproject
-.buildpath
-.idea
-.project
-.settings
-.vs
-.vscode
-composer.lock
-*.swp
-*.swo
-node_modules
-.node_modules
-package-lock.json
-*.log
-.versions
-lib
