test: add coverage generation to test command

--- a/package.json
+++ b/package.json
@@ -89,6 +89,6 @@
   },
   "scripts": {
     "lint": "eslint src/**/* -c .eslintrc --fix",
-    "test": "jest"
+    "test": "jest --coverage"
   }
 }
