--- a/.eslintrc
+++ b/.eslintrc
@@ -43,6 +43,7 @@
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/explicit-function-return-type": "error",
     "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/unbound-method": 0,
     "arrow-parens": ["error", "always"],
     "import/order": "off",
     "no-null/no-null": "error",
