--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,8 @@
 {
   "compileOnSave": true,
   "compilerOptions": {
-    "alwaysStrict": true,
-    "declaration": true,
-    "declarationMap": true,
-    "downlevelIteration": true,
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "lib": ["DOM", "ESNext", "ESNext.AsyncIterable"],
-    "module": "CommonJS",
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "outDir": "lib",
-    "removeComments": true,
-    "resolveJsonModule": true,
-    "sourceMap": true,
-    "strict": true,
-    "strictBindCallApply": true,
-    "strictFunctionTypes": true,
-    "strictNullChecks": true,
-    "strictPropertyInitialization": true,
-    "target": "ESNext",
-    "typeRoots": ["declarations", "node_modules/@types"],
-    "useDefineForClassFields": true
+    "module": "CommonJS"
   },
-  "exclude": ["node_modules", "**/*.spec.ts", "src/example"],
-  "include": ["src"]
+  "extends": "./tsconfig.base.json",
+  "include": ["example", "src"]
 }
