--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@pika/pack": "^0.5.0",
+    "@pika/plugin-build-node": "^0.9.2",
+    "@pika/plugin-ts-standard-pkg": "^0.9.2",
     "@types/jest": "^24.9.1",
     "@types/node": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
@@ -90,9 +93,23 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
+  "@pika/pack": {
+    "pipeline": [
+      [
+        "@pika/plugin-ts-standard-pkg",
+        {
+          "tsconfig": "tsconfig.build.json"
+        }
+      ],
+      [
+        "@pika/plugin-build-node"
+      ]
+    ]
+  },
   "scripts": {
     "lint": "eslint '{example,src}/**/*' -c .eslintrc --fix",
-    "test": "jest --coverage",
-    "example": "ts-node src/example"
+    "test": "rm -rf pkg & jest --coverage",
+    "build": "pika build",
+    "example": "ts-node example"
   }
 }
