--- a/package.json
+++ b/package.json
@@ -1,30 +1,22 @@
 {
   "name": "node-package-template",
   "version": "1.0.0",
-  "description": "A living, comprehensive, best-practices template for Node packages",
-  "repository": "github:harrysolovay/node-package-template",
-  "bugs": {
-    "url": "https://github.com/harrysolovay/node-package-template/issues"
-  },
-  "homepage": "https://github.com/harrysolovay/node-package-template#readme",
-  "keywords": [
-    "node",
-    "package",
-    "template"
-  ],
-  "author": {
-    "name": "Harry Solovay",
-    "email": "harrysolovay@gmail.com",
-    "url": "https://www.harrysolovay.com/"
-  },
   "license": "MIT",
   "private": false,
   "publishConfig": {
     "access": "public"
   },
-  "dependencies": {
-    "typescript": "^3.7.5"
-  },
+  "description": "A living, comprehensive, best-practices template for Node packages",
+  "repository": "github:harrysolovay/node-package-template",
+  "bugs": "https://github.com/harrysolovay/node-package-template/issues",
+  "homepage": "https://github.com/harrysolovay/node-package-template#readme",
+  "author": "Harry Solovay <harrysolovay@gmail.com> (harrysolovay.com)",
+  "keywords": [
+    "node",
+    "package",
+    "template"
+  ],
+  "dependencies": {},
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
@@ -52,7 +44,8 @@
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
     "ts-jest": "^25.0.0",
-    "ts-node": "^8.6.2"
+    "ts-node": "^8.6.2",
+    "typescript": "^3.8.2"
   },
   "jest": {
     "cache": false,
