--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@pika/pack": "^0.5.0",
     "@pika/plugin-build-node": "^0.9.2",
+    "@pika/plugin-simple-bin": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
     "@types/jest": "^24.9.1",
     "@types/node": "^13.5.0",
@@ -86,10 +87,17 @@
       ],
       [
         "@pika/plugin-build-node"
+      ],
+      [
+        "@pika/plugin-simple-bin",
+        {
+          "bin": "node-package-template-cli"
+        }
       ]
     ]
   },
   "scripts": {
+    "clean": "rm -rf yarn.lock node_modules",
     "lint": "eslint '{example,src}/**/*' -c .eslintrc --fix",
     "test": "rm -rf pkg & jest --coverage",
     "build": "pika build",
