test: configure testing of files within any given 'test' folder

--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "preset": "ts-jest",
     "testEnvironment": "node",
     "testMatch": [
-      "**/*.spec.ts"
+      "**/*.spec.ts",
+      "**/tests/**/*"
     ],
     "testPathIgnorePatterns": [
       "node_modules"
