chore: fix tsconfig 'useDefineForClassFields' warning

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,6 +23,7 @@
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
+    "target": "ES2020",
     "typeRoots": ["declarations", "node_modules/@types"],
     "useDefineForClassFields": true
   },
