--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@pika/plugin-build-node": "^0.9.2",
     "@pika/plugin-simple-bin": "^0.9.2",
     "@pika/plugin-ts-standard-pkg": "^0.9.2",
+    "@semantic-release/changelog": "^5.0.0",
+    "@semantic-release/git": "^9.0.0",
     "@types/jest": "^24.9.1",
     "@types/node": "^13.5.0",
     "@typescript-eslint/eslint-plugin": "^2.18.0",
@@ -44,6 +46,8 @@
     "husky": "^4.2.1",
     "jest": "^25.1.0",
     "prettier": "^1.19.1",
+    "semantic-release": "^17.0.4",
+    "semantic-release-plugin-update-version-in-files": "^1.0.0",
     "ts-jest": "^25.0.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.8.2"
@@ -77,6 +81,55 @@
       "pre-push": "yarn lint && yarn test",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "release": {
+    "branches": [
+      "master",
+      {
+        "name": "next",
+        "channel": "next"
+      },
+      {
+        "name": "beta",
+        "channel": "beta",
+        "prerelease": "beta"
+      }
+    ],
+    "plugins": [
+      "@semantic-release/commit-analyzer",
+      "@semantic-release/release-notes-generator",
+      [
+        "@semantic-release/changelog",
+        {
+          "changelogFile": "docs/CHANGELOG.md"
+        }
+      ],
+      [
+        "@semantic-release/git",
+        {
+          "assets": [
+            "docs/CHANGELOG.md"
+          ]
+        }
+      ],
+      "@semantic-release/github",
+      [
+        "@semantic-release/npm",
+        {
+          "pkgRoot": "./pkg"
+        }
+      ],
+      [
+        "semantic-release-plugin-update-version-in-files",
+        {
+          "files": [
+            "pkg/dist-node/index.js",
+            "pkg/dist-src/version.js"
+          ],
+          "placeholder": "SEMANTIC_VERSION_PLACEHOLDER"
+        }
+      ]
+    ]
   },
   "@pika/pack": {
     "pipeline": [
