--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -3,5 +3,6 @@
     "module": "ESNext",
     "outDir": "esm"
   },
+  "exclude": ["**/*.spec.ts", "**/tests/**/*", "src/cli.ts"],
   "extends": "./tsconfig.build.json"
 }
