--- a/.eslintrc
+++ b/.eslintrc
@@ -44,6 +44,7 @@
     "@typescript-eslint/explicit-function-return-type": "error",
     "@typescript-eslint/no-for-in-array": "off",
     "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/no-use-before-define": "off",
     "@typescript-eslint/unbound-method": 0,
     "arrow-parens": ["error", "always"],
     "import/order": "off",
