--- a/.eslintrc
+++ b/.eslintrc
@@ -41,6 +41,7 @@
   "root": true,
   "rules": {
     "@typescript-eslint/ban-ts-ignore": "off",
+    "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/explicit-function-return-type": "error",
     "@typescript-eslint/no-for-in-array": "off",
     "@typescript-eslint/no-unused-vars": "off",
@@ -50,6 +51,7 @@
     "import/order": "off",
     "no-null/no-null": "error",
     "security/detect-non-literal-fs-filename": "off",
+    "security/detect-object-injection": "off",
     "sort-class-members/sort-class-members": [
       "error",
       {
