chore: remove unnecessary jest cli safeguard against against pkg

--- a/package.json
+++ b/package.json
@@ -123,7 +123,7 @@
   "scripts": {
     "clean": "rm -rf yarn.lock node_modules esm cjs types",
     "lint": "eslint '{example,src}/**/*' -c .eslintrc --fix",
-    "test": "rm -rf pkg & jest --coverage",
+    "test": "jest --coverage",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json && chmod +x cjs/cli.js",
     "build:types": "tsc -p tsconfig.types.json",
