--- a/.eslintrc
+++ b/.eslintrc
@@ -44,9 +44,10 @@
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/explicit-function-return-type": "error",
     "@typescript-eslint/no-for-in-array": "off",
+    "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-use-before-define": "off",
-    "@typescript-eslint/unbound-method": 0,
+    "@typescript-eslint/unbound-method": "off",
     "arrow-parens": ["error", "always"],
     "import/order": "off",
     "no-null/no-null": "error",
