--- a/.eslintrc
+++ b/.eslintrc
@@ -43,6 +43,7 @@
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/explicit-function-return-type": "error",
     "@typescript-eslint/no-for-in-array": "off",
+    "@typescript-eslint/no-misused-new": "off",
     "@typescript-eslint/no-namespace": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-use-before-define": "off",
