chore: change 'author' to 'authors' in 'package.json'

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "repository": "github:harrysolovay/node-package-template",
   "bugs": "https://github.com/harrysolovay/node-package-template/issues",
   "homepage": "https://github.com/harrysolovay/node-package-template#readme",
-  "author": "Harry Solovay <harrysolovay@gmail.com>",
+  "authors": [
+    "Harry Solovay <harrysolovay@gmail.com>"
+  ],
   "keywords": [
     "node",
     "package",
