--- a/.eslintrc
+++ b/.eslintrc
@@ -42,6 +42,7 @@
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/ban-types": "off",
     "@typescript-eslint/explicit-function-return-type": "error",
+    "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-for-in-array": "off",
     "@typescript-eslint/no-misused-new": "off",
     "@typescript-eslint/no-namespace": "off",
