--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "lint": "eslint '{example,src}/**/*' --fix",
     "test": "jest --coverage",
     "build:reference": "typedoc && prettier 'docs/reference/**' --write",
+    "commit:reference": "git add docs/reference && git commit -m \"chore: build API reference\"",
     "build:types": "tsc -p tsconfig.types.json",
     "build:esm": "tsc -p tsconfig.esm.json",
     "build:cjs": "tsc -p tsconfig.cjs.json && chmod +x cjs/cli.js",
