--- a/package.json
+++ b/package.json
@@ -36,10 +36,9 @@
     "@typescript-eslint/parser": "^2.18.0",
     "conditional-type-checks": "^1.0.5",
     "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
+    "eslint-plugin-dprint": "^0.2.3",
     "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-no-null": "^1.0.2",
-    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-sort-destructure-keys": "^1.3.3",
@@ -50,7 +49,6 @@
     "exitzero": "^1.0.1",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
-    "prettier": "^1.19.1",
     "semantic-release": "^17.0.4",
     "ts-jest": "^25.0.0",
     "ts-node": "^8.6.2",
@@ -128,7 +126,7 @@
     "clean": "rm -rf yarn.lock node_modules esm cjs types",
     "lint": "eslint '{example,src}/**/*' --fix",
     "test": "jest --coverage",
-    "build:reference": "typedoc && prettier 'docs/reference/**' --write",
+    "build:reference": "typedoc && eslint 'docs/reference/**' --fix",
     "commit:reference": "git add docs/reference && git commit -m \"chore: build API reference\"",
     "build:types": "tsc -p tsconfig.types.json",
     "build:esm": "tsc -p tsconfig.esm.json",
