--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
     "@typescript-eslint/parser": "^2.18.0",
     "conditional-type-checks": "^1.0.5",
     "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-dprint": "^0.2.3",
     "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-no-null": "^1.0.2",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-sort-destructure-keys": "^1.3.3",
     "eslint-plugin-sort-keys-fix": "^1.1.0",
@@ -47,6 +49,7 @@
     "exitzero": "^1.0.1",
     "husky": "^4.2.1",
     "jest": "^25.1.0",
+    "prettier": "^2.0.5",
     "semantic-release": "^17.0.4",
     "ts-jest": "^25.0.0",
     "ts-node": "^8.6.2",
