--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,5 @@
 {
-  "exclude": ["**/*.spec.ts", "**/tests/**/*"],
+  "exclude": ["**/*.test.ts", "**/tests/**/*"],
   "extends": "./tsconfig.base.json",
   "include": ["src"]
 }
