--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-regexp": "^0.1.1",
     "eslint-plugin-sort-destructure-keys": "^1.3.3",
     "eslint-plugin-sort-keys-fix": "^1.1.0",
     "eslint-plugin-tsdoc": "^0.2.1",
