--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,6 @@ log.txt
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
@@ -42,6 +41,7 @@ jspm_packages
 
 # Yarn Integrity file
 .yarn-integrity
+yarn-lock
 
 # dotenv environment variables file
 .env
