--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,8 +22,9 @@
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
     "target": "ES2020",
-    "typeRoots": ["declarations", "node_modules/@types"],
+    "typeRoots": ["node_modules/@types"],
     "useDefineForClassFields": true
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "include": ["src"]
 }
