--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,5 +1,4 @@
 {
   "exclude": ["**/*.test.ts", "**/tests/**/*"],
-  "extends": "./tsconfig.base.json",
-  "include": ["src"]
+  "extends": "./tsconfig.base.json"
 }
