--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "types": "esm/index.d.ts",
   "module": "esm/index.js",
   "main": "cjs/index.js",
-  "bin": {
-    "node-package-template": "cjs/cli.js"
-  },
   "sideEffects": false,
   "private": false,
   "publishConfig": {
@@ -24,9 +21,6 @@
     "package",
     "template"
   ],
-  "dependencies": {
-    "npm": "^6.14.8"
-  },
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
@@ -59,13 +53,13 @@
     "globals": {
       "ts-jest": {
         "diagnostics": true,
-        "tsConfig": "tsconfig.json"
+        "tsconfig": "tsconfig.json"
       }
     },
     "preset": "ts-jest",
     "testEnvironment": "node",
     "testMatch": [
-      "**/*.spec.ts",
+      "**/*.test.ts",
       "**/tests/**/*"
     ],
     "testPathIgnorePatterns": [
