--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "eslint-plugin-sort-keys-fix": "^1.1.1",
     "eslint-plugin-tsdoc": "^0.2.7",
     "eslint-plugin-typescript-sort-keys": "^1.5.0",
-    "exitzero": "^1.0.1",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
@@ -69,14 +68,14 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint && npm run test && npm run build && typedoc && exitzero yarn commit-reference"
+      "pre-push": "npm run lint && npm run test && npm run build && npm run reference"
     }
   },
   "scripts": {
     "clean": "rm -rf cjs esm node_modules",
     "lint": "eslint '{example,src}/**/*' --fix",
     "test": "jest --coverage",
-    "commit-reference": "git add docs/reference && git commit -m \"docs: build API reference\"",
+    "reference": "rm -rf docs/reference && typedoc && git add docs/reference && git commit -m 'docs: build API reference'",
     "build": "tsc -P tsconfig.cjs.json & tsc -P tsconfig.esm.json",
     "example": "ts-node example"
   }
