--- a/package.json
+++ b/package.json
@@ -43,8 +43,6 @@
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
-    "typedoc": "^0.19.2",
-    "typedoc-plugin-markdown": "^3.0.11",
     "typescript": "^4.0.5"
   },
   "jest": {
@@ -68,14 +66,13 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "npm run lint && npm run test && npm run build && npm run reference"
+      "pre-push": "npm run lint && npm run test && npm run build"
     }
   },
   "scripts": {
     "clean": "rm -rf cjs esm node_modules",
     "lint": "eslint '{example,src}/**/*' --fix",
     "test": "jest --coverage",
-    "reference": "rm -rf docs/reference && typedoc && git add docs/reference && git commit -m 'docs: build API reference'",
     "build": "tsc -P tsconfig.cjs.json & tsc -P tsconfig.esm.json",
     "example": "ts-node example"
   }
